[gd_scene load_steps=10 format=3 uid="uid://d0v75n1n4npn4"]

[ext_resource type="Script" uid="uid://d3sl3csd2xnb0" path="res://scripts/win_game.gd" id="1_wl2rq"]
[ext_resource type="PackedScene" uid="uid://k635iu86fy37" path="res://scene_objects/menu_background.tscn" id="2_kcvt6"]
[ext_resource type="PackedScene" uid="uid://bmuu7gov5nfwd" path="res://scene_objects/title_bar.tscn" id="3_e2iwf"]
[ext_resource type="FontFile" uid="uid://d2gom50m7yb65" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="4_d6ige"]
[ext_resource type="PackedScene" uid="uid://oq5258by1a1k" path="res://scene_objects/menu_button.tscn" id="6_an7h7"]
[ext_resource type="Texture2D" uid="uid://boqax66a0370t" path="res://assets/textures/tilemap_packed.png" id="6_e2iwf"]

[sub_resource type="Animation" id="Animation_an7h7"]
resource_name = "dance"
length = 1.2766
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menuContainer/HBoxContainer/Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6383, 1.2666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_d6s7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menuContainer/HBoxContainer/Sprite2D:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_du558"]
_data = {
&"RESET": SubResource("Animation_d6s7s"),
&"dance": SubResource("Animation_an7h7")
}

[node name="YouWonScreen" type="Node2D"]
script = ExtResource("1_wl2rq")

[node name="backgroudMenu" parent="." instance=ExtResource("2_kcvt6")]
anchors_preset = -1
offset_right = 1920.0
offset_bottom = 1080.0

[node name="menuContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
offset_right = 1920.0
offset_bottom = 1052.0
theme_override_constants/separation = 40

[node name="Title" parent="menuContainer" instance=ExtResource("3_e2iwf")]
layout_mode = 2
text = "You Won!"

[node name="ColorRect" type="ColorRect" parent="menuContainer"]
custom_minimum_size = Vector2(1300, 550)
layout_mode = 2
color = Color(0.96862745, 0.7607843, 0.50980395, 1)

[node name="youWonText" type="RichTextLabel" parent="menuContainer/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 310.0
offset_top = 32.0
offset_right = 1606.0
offset_bottom = 550.0
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = 25
theme_override_fonts/normal_font = ExtResource("4_d6ige")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Congratulations. You are the RED KING.





Please consider [color=darkblue][url=https://itch.io/jam/gmtk-2025]rating this game for the GMTK Jam[/url][/color] or leaving [color=darkblue][url=https://jynus.itch.io/]a comment[/url][/color].[/center]"
scroll_following = true

[node name="HBoxContainer" type="HBoxContainer" parent="menuContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="creditsButton" parent="menuContainer/HBoxContainer" instance=ExtResource("6_an7h7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
text = "Credits"

[node name="backButton" parent="menuContainer/HBoxContainer" instance=ExtResource("6_an7h7")]
unique_name_in_owner = true
custom_minimum_size = Vector2(700, 100)
layout_mode = 2
text = "Back to main menu"

[node name="Sprite2D" type="Sprite2D" parent="menuContainer/HBoxContainer"]
position = Vector2(975, -353)
scale = Vector2(12, 12)
texture = ExtResource("6_e2iwf")
region_enabled = true
region_rect = Rect2(0, 112, 16, 16)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_du558")
}
autoplay = "dance"

[connection signal="meta_clicked" from="menuContainer/ColorRect/youWonText" to="." method="_on_you_won_text_meta_clicked"]
[connection signal="pressed" from="menuContainer/HBoxContainer/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="menuContainer/HBoxContainer/backButton" to="." method="_on_back_button_pressed"]
